<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="Cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:title="Next"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_mail"
        android:title="Send as email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_reminder"
        android:title="@string/action_set_reminder" />
</menu>